# creditcard-registry

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: README.md  alembic.ini  makefile  pyproject.toml  requirements.txt
api/alembic/versions/: 98809192a8d4_criando_tabelas_do_banco_de_dados.py
api/src/: config.py  main.py  utils.py
api/src/core/domain/creditcard/: model.py
api/src/core/domain/creditcards/: model.py
api/src/core/domain/users/: model.py
api/src/core/schemas/auth/: __init__.py
api/src/core/schemas/creditcard/: __init__.py
api/src/core/schemas/users/: __init__.py
api/src/core/usecases/: auth_usecase.py  creditcard_usecase.py  user_usecase.py
api/src/entrypoints/routes/v1/: __init__.py
api/src/entrypoints/routes/v1/authentication/: __init__.py
api/src/entrypoints/routes/v1/creditcard/: __init__.py
api/src/entrypoints/routes/v1/users/: __init__.py
api/src/infra/adapters/database/: base.py  session.py
api/src/infra/repositories/creditcard/: __init__.py
api/src/infra/repositories/users/: __init__.py
api/tests/integration/: main.py
api/tests/unit/: test_utils.py
src/: main.py
