[tool.poetry]
name = "api"
version = "0.1.0"
description = "Challenge for MaisTodos company"
authors = ["rafael rotiroti <rotirotirafa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
python-creditcard = {path = "../python-creditcard"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
